tdf#101116 Template manager not correctly exposed to assistive technolgies

Tooltips to work as labels
Return key to open dropdown of toolbox

Change-Id: Ie4637028b018a962ce8c59667c43ae4eee0fea74